# RocketData

./: .gitignore  .secret  README.md  celerybeat-schedule.db  example_data.json  pyproject.toml  requirements.txt
manufacturer/: admin.py  apps.py  filter.py  generate_qr.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
manufacturer/management/commands/: create_employee.py
manufacturer/migrations/: 0001_initial.py  0002_rename_network_network_employee.py
root/: __init__.py  celery.py  settings.py  urls.py
root/static/js/: copy_email.js
root/templates/admin/manufacturer/: submit_line.html
